# genivf

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  genivf.cc  genivf.cpp  genivf.h  genivf.hpp  genivf.test.cpp  log.txt  log_128_left.txt  log_128_right.txt  log_512_left.txt  log_512_right.txt  log_left.txt  main.cc  main.cpp  measure_accuracy  meson.build  point.test.cpp
.github/workflows/: ci.yml
.zed/: debug.json  settings.json  tasks.json
data/: dengue_ref_sequences.flat.index  dengue_ref_sequences.index  dengue_ref_sequences.ivf.index
docs/: demo.md  report.typ
examples/: build_flat_index.cpp  build_ivf.cpp  measure_accuracy.cpp  measure_accuracy_bsivf.cpp  meson.build  query_ivf.cpp  simple.cpp
include/: bsivf.hpp  flat.hpp  genivf.hpp  io.hpp  ivf.hpp  logger.hpp  seq.hpp  types.hpp  utils.hpp
src/: bsivf.cpp  flat.cpp  genivf.cpp  io.cpp  ivf.cpp  seq.cpp
tests/: bsivf.test.cpp  flat.test.cpp  genivf.test.cpp  io.test.cpp  meson.build  point.test.cpp  seq.test.cpp  utils.test.cpp
