executable(
    'simple',
    'simple.cpp',
    dependencies: genivf_dep,
    cpp_args: lib_args,
)
executable(
    'build_ivf',
    'build_ivf.cpp',
    dependencies: genivf_dep,
    cpp_args: lib_args,
)
executable(
    'query_ivf',
    'query_ivf.cpp',
    dependencies: genivf_dep,
    cpp_args: lib_args,
)
executable(
    'build_flat_index',
    'build_flat_index.cpp',
    dependencies: genivf_dep,
    cpp_args: lib_args,
)
executable(
    'measure_accuracy',
    'measure_accuracy.cpp',
    dependencies: genivf_dep,
    cpp_args: lib_args,
)
